[gd_scene load_steps=22 format=3 uid="uid://56i8hksasg6k"]

[ext_resource type="Script" uid="uid://djagsirtf8gf7" path="res://Enemies/fire_flower.gd" id="1_3ai4o"]
[ext_resource type="Resource" uid="uid://62itv2tcw0v8" path="res://Stats/fire_flower_stats.tres" id="2_q8rgf"]
[ext_resource type="PackedScene" uid="uid://hakdr4fdj1fo" path="res://Combat/health_component.tscn" id="3_3ai4o"]
[ext_resource type="Shader" uid="uid://cd25tciedu4h5" path="res://Combat/ShaderComplementary.gdshader" id="5_kh7dj"]
[ext_resource type="Texture2D" uid="uid://jryh263ou55g" path="res://Enemies/Sprites/fire flower.png" id="6_cmhcm"]
[ext_resource type="PackedScene" uid="uid://6c21m1l8r268" path="res://Combat/hurtbox.tscn" id="7_6klst"]
[ext_resource type="PackedScene" uid="uid://cfur0wgencjh8" path="res://Enemies/player_detection_zone.tscn" id="8_dunnx"]
[ext_resource type="PackedScene" uid="uid://lfrhnehwb41h" path="res://Combat/hitbox.tscn" id="9_g12ri"]
[ext_resource type="PackedScene" uid="uid://gh2hmf87o2ox" path="res://Enemies/sword_slow_controller.tscn" id="12_fbdxg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4od23"]
resource_local_to_scene = true
shader = ExtResource("5_kh7dj")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ybdl0"]
atlas = ExtResource("6_cmhcm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x85w3"]
atlas = ExtResource("6_cmhcm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8irpb"]
atlas = ExtResource("6_cmhcm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7n145"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybdl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x85w3")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8irpb")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fgnr"]
radius = 4.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loe2b"]
size = Vector2(14, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_qxvdp"]
radius = 81.0247

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lh42r"]
size = Vector2(8, 10.5)

[sub_resource type="Animation" id="Animation_eeofm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2qxec"]
resource_name = "Start"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ce8b3"]
_data = {
&"RESET": SubResource("Animation_eeofm"),
&"Start": SubResource("Animation_2qxec")
}

[node name="FireFlower" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
script = ExtResource("1_3ai4o")
stats = ExtResource("2_q8rgf")
metadata/_edit_group_ = true

[node name="Health_Component" parent="." instance=ExtResource("3_3ai4o")]

[node name="SwordSlowController" parent="." instance=ExtResource("12_fbdxg")]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4od23")
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_7n145")
animation = &"Attack"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0fgnr")

[node name="Hurtbox" parent="." instance=ExtResource("7_6klst")]
visible = false
position = Vector2(0, -2)
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("RectangleShape2D_loe2b")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("8_dunnx")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_qxvdp")
debug_color = Color(0, 0.6, 0.701961, 0.121569)

[node name="Hitbox" parent="." instance=ExtResource("9_g12ri")]
visible = false
collision_layer = 128
collision_mask = 260

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_lh42r")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ce8b3")
}

[node name="BulletCooldown" type="Timer" parent="."]
one_shot = true

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
